--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,4 +27,6 @@
 
 		<!-- RSS -->
 		<link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+
+                {{ template "_internal/google_analytics.html" . }}
 	</head>
